<resources>
    <string name="app_name">PBS Radio</string>

    <string name="schedule_title">Schedule</string>
    <string name="news_title">News</string>
    <string name="loading">Loading…</string>

    <string name="now_playing">Now Playing</string>
    <string name="stream_audio">Stream Audio</string>
    <string name="program_title">Shows</string>
    <string name="program_episodes">Episodes</string>
    <string name="episode_title">Episode</string>
    <string name="episode_tracks">Tracks</string>

    <string name="program_search">Find a show</string>
    <string name="program_search_empty">No shows found</string>

    <string name="presenter_with">with\n%1$s</string>

    <string name="saved_title">Saved</string>
    <string name="settings_title">Settings</string>

    <string name="go_live">Go Live</string>
    <string name="on_air">ON AIR</string>

    <string name="download_permission_needed">We need these permissions to download episodes</string>

    <string name="cd_download">Download</string>
    <string name="cd_banner">Banner Image</string>
    <string name="cd_presenter_image">Presenter Image</string>
    <string name="cd_play_button">Play Button</string>
    <string name="cd_episode_nav">Go to Episode</string>
    <string name="cd_close">Close</string>
</resources>