<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/schedule"
    android:id="@+id/nav_graph">
    <fragment
        android:id="@+id/schedule"
        android:name="dev.dennismcdaid.radio.ui.schedule.ScheduleFragment"
        android:label="@string/schedule_title"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_schedule_to_program_detail"
            app:destination="@id/program_detail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/programs"
        android:name="dev.dennismcdaid.radio.ui.program.ProgramListFragment"
        android:label="@string/program_title"
        tools:layout="@layout/fragment_program_list" >
        <action
            android:id="@+id/action_programs_to_program_detail"
            app:destination="@id/program_detail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/program_detail"
        android:label="@string/schedule_title"
        android:name="dev.dennismcdaid.radio.ui.program.detail.ProgramDetailFragment"
        tools:layout="@layout/fragment_program_detail" >
        <argument
            android:name="slug"
            app:argType="string" />
        <action
            android:id="@+id/action_program_detail_to_episode"
            app:destination="@id/episode"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/episode"
        android:label="@string/episode_title"
        android:name="dev.dennismcdaid.radio.ui.program.episode.EpisodeFragment"
        tools:layout="@layout/fragment_episode" >
        <argument
            android:name="bundle"
            app:argType="dev.dennismcdaid.radio.ui.program.episode.EpisodeBundle" />
    </fragment>

    <fragment
        android:id="@+id/now_playing"
        android:name="dev.dennismcdaid.radio.ui.nowplaying.NowPlayingFragment"
        tools:layout="@layout/fragment_now_playing" />

    <action
        android:id="@+id/action_go_to_now_playing"
        app:destination="@id/now_playing"
        app:popEnterAnim="@anim/pop_fade_in_below"
        app:enterAnim="@anim/pop_in_above"
        app:exitAnim="@anim/pop_fade_out"
        app:popExitAnim="@anim/pop_fade_out" />
</navigation>