<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:contentDescription="@string/cd_close"
        android:id="@+id/close_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="@dimen/spacing_medium_rare"
        android:src="@drawable/ic_down_chevron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/show_card"
        app:layout_constraintTop_toBottomOf="@id/close_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/show_name"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="@dimen/spacing_burnt"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/show_image"
            android:contentDescription="@string/cd_presenter_image"
            tools:src="@drawable/ic_music_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintTop_toBottomOf="@id/show_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppTheme.Headline5"
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/show_name"
        tools:text="Hippopotamus Rex"
        android:layout_margin="@dimen/gutter"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/presenter"
        android:layout_marginStart="@dimen/gutter"
        android:layout_marginEnd="@dimen/gutter"
        android:layout_marginTop="@dimen/spacing_rare"
        style="@style/AppTheme.Subtitle1"
        tools:text="Ronin Hamill"
        app:layout_constraintTop_toBottomOf="@id/show_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/presenter"
        android:layout_marginStart="@dimen/gutter"
        android:id="@+id/description"
        android:layout_marginEnd="@dimen/gutter"
        android:layout_marginTop="@dimen/spacing_rare"
        style="@style/TextAppearance.MaterialComponents.Body2"
        tools:text="hip hop beats, bass and experimental"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/play_button"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:contentDescription="@string/cd_play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing_burnt"
        android:src="@drawable/ic_play_circle"
        android:layout_width="@dimen/spacing_charred"
        android:layout_height="@dimen/spacing_charred" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/live_toggle"
        app:layout_constraintTop_toTopOf="@id/close_btn"
        app:layout_constraintBottom_toBottomOf="@id/close_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/on_air"
        android:foreground="?attr/selectableItemBackground"
        style="@style/AppTheme.Subtitle1"
        android:drawablePadding="@dimen/spacing_rare"
        android:drawableStart="@drawable/ic_on_air"
        android:layout_margin="@dimen/spacing_medium_rare"
        android:padding="@dimen/spacing_medium_rare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>